Added ability to select ML Examples from STM images for #46